--- a/src/Zip.Pdv.Form/Properties/Resources.resx
+++ b/src/Zip.Pdv.Form/Properties/Resources.resx
@@ -493,4 +493,13 @@
   <data name="img_pedido" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\img_pedido.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="mesa_disponivel" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\mesa_disponivel.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="mesa_ocupada" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\mesa_ocupada.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="mesa_pendente" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\mesa_pendente.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
